backend: create JWT

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,3 +8,6 @@ DATABASE_NAME = "hackathon_2"
 DATABASE_USERNAME = "root"
 DATABASE_PASSWORD = ""
 DATABASE_SYNCHRONIZE = true
+
+# JWT
+JWT_PUBLIC_KEY = "297dd99e-ec0a-4c3d-b0d5-f34593c1298e" 
