--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,6 @@ DATABASE_SYNCHRONIZE = true
 
 # JWT
 JWT_PUBLIC_KEY = "297dd99e-ec0a-4c3d-b0d5-f34593c1298e" 
+
+# Frontend URL
+FRONTEND_URL = "http://localhost:8080"
